# OpenTTD

./: .gitignore  .gitmodules  .ottdrev  CMakeLists.txt  COMPILING.md  README.md  SlowPace.md
.github/ISSUE_TEMPLATE/: dev-task.yaml  feature.yaml
.github/workflows/: ci-build.yml  ci-linux-python.yml  linux-random-debug.yml  macos-random-debug.yml  release.yml
cmake/: InstallAndPackage.cmake
cmake/scripts/: FindVersion.cmake  PythonExport.cmake  PythonExportEnum.cmake  PythonModules.cmake
debian/: .gitignore  NEWS  README.Debian  changelog  clean  control  copyright  openttd-data.install  openttd-data.lintian-overrides  openttd.install  openttd.lintian-overrides  rules  watch
debian/patches/: rtl-language-message.patch  series
debian/source/: lintian-overrides
debian/upstream/: metadata
docs/: landscape.html  multiplayer.md  python.md
src/: CMakeLists.txt  aircraft.h  aircraft_cmd.cpp  articulated_vehicles.cpp  clear_cmd.cpp  clear_map.h  command.cpp  command_func.h  command_type.h  company_base.h  company_cmd.cpp  console_cmds.cpp  date.cpp  date_func.h  date_gui.cpp  date_gui.h  date_type.h  debug.cpp  debug.h  direction_type.h  economy.cpp  economy_type.h  fileio_func.h  framerate_gui.cpp  framerate_type.h  gamelog_internal.h  genworld_gui.cpp  graph_gui.cpp  industry.h  industry_cmd.cpp  industry_gui.cpp  intro_gui.cpp  misc_cmd.cpp  misc_gui.cpp  newgrf.cpp  newgrf_engine.cpp  newgrf_profiling.cpp  newgrf_profiling.h  openttd.cpp  openttd.h  (+28 more)
src/core/: enum_type.hpp  math_func.hpp  strong_typedef_type.hpp
src/game/: game_instance.cpp
src/lang/: english.txt  english_US.txt  german.txt
src/network/: network.cpp  network_client.cpp  network_command.cpp  network_internal.h  network_server.cpp  network_type.h
src/python/: .gitignore  CMakeLists.txt  README.md  call_py.cpp  call_py.hpp  collect_enum.py  enums.cpp.in  export.cpp.in  export.py  export_enum.cpp.in  export_enum.py  export_strings.py  gui.cpp  gui.h  instance.cpp  instance.hpp  mode.cpp  mode.hpp  modules.cpp.in  msg.cpp  msg_base.cpp  msg_base.hpp  msg_command.cpp  msg_command.hpp  msg_console.cpp  msg_console.hpp  msg_mode.cpp  msg_mode.hpp  object.cpp  object.hpp  queues.cpp  queues.hpp  script_cmd.h  script_funcs.h  setup.cpp  setup.hpp  support.cpp  support.hpp  task.cpp  task.hpp  (+2 more)
src/python/openttd/: __init__.py  _hook.py  _main.py  _stub.py  _stub_export.py  _test.py  _util.py  base.py  bridge.py  cargo.py  company.py  error.py  internal.py  road.py  sign.py  tile.py  town.py  util.py  vehicle.py
src/python/openttd/_msg/: __init__.py  command.py
src/python/openttd/_stub/: __init__.py
src/python/openttd/_support/: __init__.py  id.py  tile.py
src/python/openttd/_test/: __init__.py  basic.py  basic_async.py  bugtask.py  cargo.py  company.py  delay.py  error.py  roadpath.py  town.py
src/python/openttd/lib/: astar.py
src/python/openttd/lib/pathfinder/: road.py
src/python/tests/: pytest.scn  test_tile.py
src/saveload/: afterload.cpp  company_sl.cpp  gamelog_sl.cpp  industry_sl.cpp  misc_sl.cpp  saveload.h  town_sl.cpp  vehicle_sl.cpp
src/script/: script_instance.cpp  script_instance.hpp  script_storage.hpp  script_suspend.hpp  squirrel.hpp
src/script/api/: Doxyfile_PY.in  Doxyfile_Python.in  doxygen_filter.awk  script_company.cpp  script_company.hpp  script_controller.hpp  script_grouplist.cpp  script_grouplist.hpp  script_industrylist.cpp  script_industrylist.hpp  script_object.cpp  script_object.hpp  script_signlist.cpp  script_signlist.hpp  script_subsidylist.cpp  script_subsidylist.hpp  script_townlist.cpp  script_townlist.hpp  script_vehiclelist.cpp  script_vehiclelist.hpp  script_window.hpp.in
src/table/: control_codes.h  strgen_tables.h
src/table/settings/: difficulty_settings.ini  game_settings.ini
src/video/: null_v.cpp
src/widgets/: CMakeLists.txt  date_widget.h  genworld_widget.h  intro_widget.h  pace_factor_widget.h  python_widget.h
